<resources>
    <string name="moviePoster">Movie Poster</string>
    <string name="app_name">Movie App</string>
    <string name="movie_Title">Whiplash</string>
    <string name="ratingBar"> </string>
    <string name="movieGenre">Drama, Music</string>
    <string name="movieDirector">Director:</string>
    <string name="movieActors">Actors:</string>
    <string name="storyHead">Story</string>
    <string name="storyText">Story Description</string>
    <string name="floatingActionButton">Action</string>
    <string name="watchlist">Watchlist</string>
    <string name="see_detail">See detail</string>
    <string name="restart">restart</string>
    <string name="default_score">0/0</string>
    <string name="your_score">Your Score</string>
    <string name="next">Next Question</string>
    <string name="welcome">Welcome to MovieApp!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actors_separated_with">Actors (separated with ,)</string>
    <string name="creators_separated_with">Creators (separated with ,)</string>
    <string name="drama">Drama</string>
    <string name="sport">Sport</string>
    <string name="thriller">Thriller</string>
    <string name="documentation">Documentation</string>
    <string name="kids">Kids</string>
    <string name="horror">Horror</string>
    <string name="title">Title</string>
    <string name="quiz">Quiz</string>

    <string name="question_progress">Question %d/%d</string>
</resources>