<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.example.movieapp.models.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/prime"
        android:foregroundTint="#FFFFFF"
        tools:context=".DetailFragment">

        <ImageView
            android:id="@+id/movie_Poster"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/moviePoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            setImageSrc="@{movie.imageId}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_Poster">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@={movie.title}"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/rating_Bar"
                    android:isIndicator="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:rating="@{movie.rating}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_Title" />

                <TextView
                    android:id="@+id/movie_Genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:mapListToString="@{movie.genre}"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_Title" />

                <TextView
                    android:id="@+id/story_Head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="26dp"
                    android:gravity="center"
                    android:text="@string/storyHead"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_Actors_title" />

                <TextView
                    android:id="@+id/story_Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{movie.story}"
                    android:textColor="#FFFFFF"
                    app:layout_constraintTop_toBottomOf="@+id/story_Head" />

                <TextView
                    android:id="@+id/movie_Director_title"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/movieDirector"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rating_Bar" />

                <TextView
                    android:id="@+id/movie_Actors_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/movieActors"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_Director_title" />

                <TextView
                    android:id="@+id/movie_Director"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/movie_Director_title"
                    app:layout_constraintTop_toTopOf="@+id/movie_Director_title"
                    app:mapListToString="@{movie.director}"/>

                <TextView
                    android:id="@+id/movie_Actors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/movie_Actors_title"
                    app:layout_constraintTop_toTopOf="@+id/movie_Actors_title"
                    app:mapListToString="@{movie.actors}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addToFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:contentDescription="@string/floatingActionButton"
            android:focusable="true"
            app:backgroundTint="@color/details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
